<resources>
    <string name="app_name">FinalProject</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Login</string>
    <string name="create_account_text">Don\'t have an Account? Create one</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="sign_out">Sign out</string>
    <string name="login_register">Login/Register</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="close_navigation">Close Navigation</string>
    <string name="forgot_password_reset_now">Forgot Password? Reset Now</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_passwrod">Enter Passwrod</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_password_login">Remember password? Login</string>
    <string name="home">Home</string>
    <string name="select_photo">Select Photo</string>
    <string name="profile">Profile</string>
    <string name="new_message">New Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="resend_verification">Resend Verification</string>
    <string name="update_profile">Update Profile</string>
    <string name="channel_name">FinalProjectChannel</string>
    <string name="channel_description">FinalProjectChannelDescription</string>
</resources>
