<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#000"
             android:padding="30dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/logInSignInActivityLayout"
            android:visibility="visible">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal|top"
                  android:textColor="#fff"
                  android:text="@string/log_in"
                  android:textSize="35sp"
                  android:layout_marginBottom="30dp"/>

        <EditText
                android:id="@+id/emailSignInActivityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_person_icon"
                android:drawableLeft="@drawable/ic_person_icon"
                android:drawablePadding="20dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="15dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="15dp"
                android:textColor="#616161"
                android:textColorHint="#616161"
                android:focusable="auto"/>


        <EditText
                android:id="@+id/passwordSignInActivityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_key_icon"
                android:drawableLeft="@drawable/ic_key_icon"
                android:drawablePadding="16dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="15dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="15dp"
                android:textColor="#616161"
                android:textColorHint="#616161"
                android:focusable="true">
        </EditText>

        <Button
                android:id="@+id/logInSignInActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corners"
                android:paddingStart="100dp"
                android:paddingLeft="100dp"
                android:paddingTop="15dp"
                android:paddingEnd="100dp"
                android:paddingRight="100dp"
                android:paddingBottom="15dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/createAccountSignInActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/create_account_text"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="12sp"/>

        <Button
                android:id="@+id/resetPasswordSignInActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/forgot_password_reset_now"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/resetPasswordSignInActivityLayout"
            android:visibility="gone">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal|top"
                  android:textColor="#fff"
                  android:text="@string/reset_password"
                  android:textSize="35sp"
                  android:layout_marginBottom="30dp"/>

        <EditText
                android:id="@+id/emailResetPassSignInActivityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_person_icon"
                android:drawableLeft="@drawable/ic_person_icon"
                android:drawablePadding="20dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="15dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="15dp"
                android:textColor="#616161"
                android:textColorHint="#616161"
                android:focusable="auto">
        </EditText>

        <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corners"
                android:paddingStart="60dp"
                android:paddingLeft="60dp"
                android:paddingTop="15dp"
                android:paddingEnd="60dp"
                android:paddingRight="60dp"
                android:paddingBottom="15dp"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/backToSignInActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/remember_password_login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="12sp"/>

    </LinearLayout>


</FrameLayout>