<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="top|center"
              android:background="#EEE">
    <FrameLayout android:layout_width="wrap_content"
                 android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePictureCircleView"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"
                android:layout_margin="10dp"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="150dp"
                android:width="150dp"
                android:background="@drawable/rounded_corners_transparent"
                android:layout_margin="10dp"
                android:text="@string/select_photo"
                android:textColor="#000"
                android:textStyle="bold"
                android:id="@+id/selectPhotoProfileFragmentButton"/>

    </FrameLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/colorPrimary"
              android:textSize="15sp"
              android:layout_marginTop="10dp"
              android:id="@+id/verifiedStatusProfileFragmentTextView"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/colorPrimary"
              android:textSize="30sp"
              android:textStyle="bold"
              android:layout_marginTop="5dp"
              android:id="@+id/userNameProfileFragmentTextView"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/colorPrimary"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:id="@+id/emailProfileFragmentTextView"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="15dp">

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_profile"
                android:id="@+id/updateData"
                android:background="@drawable/rounded_corners"
                android:padding="8dp"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_verification"
                android:id="@+id/resendVerificationEmail"
                android:background="@drawable/rounded_corners"
                android:padding="8dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

    </LinearLayout>

</LinearLayout>